--- a/css/css.css
+++ b/css/css.css
@@ -421,7 +421,7 @@ body {
     padding-right: 0;
   }
 
-  .imperative-item-picture-container {
+  .imperative-item-picture {
     min-height: 100px;
   }
 }
